[package]
name = "seldom_map_nav"
version = "0.5.0"
edition = "2021"
categories = ["game-development"]
description = "Bevy plugin that does navmesh generation, pathfinding, and navigation for tilemaps. Navmesh generation is available without Bevy dependency."
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "pathfinding", "navmesh", "tilemap"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_map_nav"

[features]
bevy = ["dep:bevy", "dep:seldom_fn_plugin"]
default = ["bevy"]
log = []
state = ["dep:seldom_state"]

[dependencies]
bevy = { version = "0.13.0", default-features = false, optional = true }
cdt = "0.1.0"
glam = { version = "0.25.0", features = ["mint"] }
mint = "0.5.9"
# Incompatible with wasm; see https://github.com/PsichiX/navmesh/pull/5
navmesh = { version = "0.12.1", features = ["mint"] }
seldom_fn_plugin = { version = "0.6.0", optional = true }
seldom_state = { version = "0.10.0", optional = true }

[dev-dependencies]
rand = "0.8.5"
bevy = "0.13.0"
bevy_entitiles = "0.9.0"

[[example]]
name = "state"
required-features = ["state"]
