[package]
name = "seldom_map_nav"
version = "0.8.0"
edition = "2021"
categories = ["game-development"]
description = "Bevy plugin that does navmesh generation, pathfinding, and navigation for tilemaps. Navmesh generation is available without Bevy dependency."
exclude = ["assets/"]
keywords = ["gamedev", "bevy", "pathfinding", "navmesh", "tilemap"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Seldom-SE/seldom_map_nav"
autoexamples = false

[features]
bevy = ["dep:bevy"]
default = ["bevy"]
log = []
state = ["dep:seldom_state"]
wasm = ["typid/web"]

[dependencies]
bevy = { version = "0.15.0", default-features = false, optional = true }
cdt = "0.1.0"
glam = { version = "0.29.0", features = ["mint"] }
mint = "0.5.9"
navmesh = { version = "0.12.1", features = ["mint"] }
seldom_state = { version = "0.12.0", optional = true }
typid = "1.1"

[dev-dependencies]
rand = "0.8.5"
bevy = "0.15.0"
# bevy_entitiles = { git = "https://github.com/443eb9/bevy_entitiles", rev = "e2ff0d5" }

[[example]]
name = "nav"

[[example]]
name = "no_bevy"

[[example]]
name = "state"
required-features = ["state"]
